[project]
name = "gmail-checker"
version = "0.1.0"
description = "A command-line tool to check Gmail for new messages and manage read status."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.177.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "oauth2client>=4.1.3",
]
